--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-auth-template",
+  "name": "forumProject_client",
   "homepage": "https://<USERNAME>.github.io/<REPO NAME>",
   "version": "0.1.0",
   "private": true,
