--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forumProject_client",
-  "homepage": "https://<USERNAME>.github.io/<REPO NAME>",
+  "homepage": "https://nugrezo.github.io/forumProject_client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
